# PtAC

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  build.sh  ci-all.yml  ci-windows.yml  ci.yml  environment.yml  meta.yaml  meta.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests.py  tox.ini  windows_action_with_conda.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/build_environments/: environment.yml
.github/workflows/: cd-publish-to-test-pypi.yml  cd.yml  ci-all.yml  ci-linux.yml  ci-macos.yml  ci-mamba-all.yml  ci-test.yml  ci-windows.yml  ci.yml  conda_actions.yml  mamba_actions.yml  minicona_ci.yml  publish-ptac-anaconda.yml  publish-ptac-tespypi.yml  publish-ptac.yml  publish-to-test-pypi.yml  windows_action_with_conda.yml
LICENSES/: EPL-2.0.txt
PtAC/: accessibility.py  osm.py  settings.py  util.py
conda/: conda_build_config.yaml  meta.yaml
data/: nairobi_pt_high.gpkg  nairobi_pt_high_capacity.gpkg  nairobi_pt_low_capacity.gpkg  population_example.gpkg  pt_example.gpkg  pt_example_high_capacity.gpkg  pt_example_low_capacity.gpkg  pt_low_example.gpkg
data/raster/: friedrichshain_raster.tif
demopkg/: accessibility_sdg.py  gtfs.py  network.py  urbanspatialio.py  util.py
docs/: requirements.txt
docs/source/: PtAC.rst  README.rst  conf.py  index.rst  internals.rst  ptac.rst  user-guide.rst
environment/windows/: environment.yml
etc/: environment-dev.yml  environment-linux.yml  environment-windows.yml  example-environment.yml  requirements.txt
examples/: friedrichshain_example.ipynb  friedrichshain_example_2.ipynb  nairobi_example.ipynb  population_example.ipynb
examples/tmp/: destinations.csv
ptac/: README.md  accessibility.py  gtfs.py  osm.py  plot.py  population.py  settings.py  util.py
tests/: README.md  code_format.sh  environment-dev.yml  environment.yml  lint_test.sh  test_ptac.py
tests/input_data/: boundary_example.gpkg  friedrichshain_population.gpkg  nairobi_pt_low.gpkg  net_test.gpkg  pop_test.gpkg  population_example.gpkg  pt_example.gpkg  pt_high_example.gpkg  pt_high_test.gpkg  pt_low_test.gpkg  pt_test.gpkg  raster_test.tif
