[tool.poetry]
name = "ptac"
version = "0.1.1"
description = ""
authors = ["Simon Nieland <Simon.Nieland@dlr.de>", 
           "Serra Yosmaoglu <Serra.Yosmaoglu@dlr.de>"]
licence = "Eclipse Public License 2.0 (EPL-2.0)"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
osmnx = "1.1.1"
geopandas = "0.9.0"
networkx = "^2.5"
numpy = "1.20.3"
Shapely = "1.7.1"
pyproj = "3.1.0"
rasterio = "1.2.4"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-cov = "3.0.0"
setuptools = "60.6.0"
wheel = "^0.37.1"
twine = "^4.0.0" 
mypy = "0.910"
tox = "3.24.5"
flake8 = "4.0.1"
black = "^22.3.0"
pylint = "^2.13.8"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.4"}

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
