[metadata]
name = ptac
licence = Eclipse Public License 2.0 (EPL-2.0)
license_files = LICENSE.md
platforms = unix, linux, win32
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)

[options]
packages =
    ptac
# install_requires =
    # osmnx>=1.1.1
    # networkx>=2.5
    # numpy==1.20.3
    # Shapely==1.7.1
    # pyproj==3.1.0
    # geopandas==0.9.0
    # rasterio==1.2.4
    # pandas==1.2.4
python_requires = >=3.8
#zip_safe = no

# [options.extras_require]
# testing =
    # pytest>=7.1
    # pytest-cov>=3.0
    # mypy>=0.910
    # flake8>=4.0.1
    # tox>=3.24
    # tox-conda>=0.9.0

# [options.package_data]
# ptac = py.typed

[flake8]
max_line_length = 120
